# hook_demo

./: README.md  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/elf/call/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  example_dobby.cpp  native-lib.cpp  person.cpp  person.h
app/src/main/cpp/hook/: elf_parse.cpp  elf_parse.h  hook.cpp  log.h
app/src/main/java/com/elf/call/: App.java  Call.java  ELFCallUtil.java  Hook.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/elf/call/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
